--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#home" class="nav-logo">UKJ</a>
+            <a href="#home" class="nav-logo">Uttam KJ</a>
             <ul class="nav-menu">
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
