index page modified in education section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="timeline-content">
                         <div class="timeline-header">
                             <h3>Software Engineer</h3>
-                            <span class="timeline-date">June 2024 - Present</span>
+                            <span class="timeline-date">June 2025 - Present</span>
                         </div>
                         <h4 class="company-name">TECHNOSHRINE INFOSOLUTIONS</h4>
                         <div class="experience-description">
@@ -170,10 +170,10 @@
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
                         <div class="timeline-header">
-                            <h3>Position Title</h3>
-                            <span class="timeline-date">Start Date - End Date</span>
+                            <h3>Java Developer Intern</h3>
+                            <span class="timeline-date">Oct 2024 - Jan 2025</span>
                         </div>
-                        <h4 class="company-name">Company Name</h4>
+                        <h4 class="company-name">seeree services private limited</h4>
                         <div class="experience-description">
                             <p><em>Add description here...</em></p>
                         </div>
@@ -315,7 +315,7 @@
                         <span class="skill-tag">React</span>
                         <span class="skill-tag">Node.js</span>
                         <span class="skill-tag">Express</span>
-                        <span class="skill-tag">Django</span>
+                        <span class="skill-tag">BootStrap 5</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -324,7 +324,7 @@
                         <span class="skill-tag">MySQL</span>
                         <span class="skill-tag">PostgreSQL</span>
                         <span class="skill-tag">MongoDB</span>
-                        <span class="skill-tag">Redis</span>
+                        <!-- <span class="skill-tag">Redis</span> -->
                     </div>
                 </div>
                 <div class="skill-category">
@@ -332,7 +332,7 @@
                     <div class="skill-tags">
                         <span class="skill-tag">Git</span>
                         <span class="skill-tag">Docker</span>
-                        <span class="skill-tag">AWS</span>
+                        <span class="skill-tag">Kubernetes</span>
                         <span class="skill-tag">REST APIs</span>
                         <span class="skill-tag">Agile/Scrum</span>
                     </div>
@@ -356,8 +356,8 @@
                     </div>
                     <div class="education-content">
                         <h3>Master of Computer Applications (MCA)</h3>
-                        <p class="education-institution">University Name</p>
-                        <p class="education-date">Year of Completion</p>
+                        <p class="education-institution">Silicon University</p>
+                        <p class="education-date">Year of Completion : 2025</p>
                         <p class="education-description">
                             Advanced studies in computer science and application development.
                             Specialized in full-stack development, software engineering principles, and modern web
@@ -377,8 +377,8 @@
                     </div>
                     <div class="education-content">
                         <h3>Bachelor of Science in Computer Science (Honours)</h3>
-                        <p class="education-institution">University Name</p>
-                        <p class="education-date">Year of Completion</p>
+                        <p class="education-institution">Maharaja Purna Chandra Autonomous College</p>
+                        <p class="education-date">Year of Completion : 2023</p>
                         <p class="education-description">
                             Foundation in computer science fundamentals including data structures, algorithms,
                             database management, and object-oriented programming.
